result.html added and style.css modified

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </h2>
       </div>
       <div id="survey-form">
-        <form action="">
+        <form action="result.html">
           <div class="box">
             <label for="name" class="labels" id="label-name">Name:</label>
             <input
@@ -79,7 +79,7 @@
               <label for="romance">Romance</label>
             </div>
           </div>
-          <br>
+          <br />
           <div class="box">
             <p class="labels">Gender:</p>
             <div class="radio">
